<resources>
    <string name="app_name">계산기</string>
    <string name="n">x^2</string>
    <string name="rightBlock">)</string>
    <string name="multiply">×</string>
    <string name="exp">exp</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="ans">ans</string>
    <string name="equalsSign">=</string>
    <string name="plus">+</string>
    <string name="button"></string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="backSpace">지움</string>
    <string name="mod">%</string>
    <string name="division">÷</string>
    <string name="eight">8</string>
    <string name="roots">√</string>
    <string name="leftBlock">(</string>
    <string name="clear">c</string>
    <string name="seven">7</string>
    <string name="pi">π</string>
    <string name="minus">-</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="e">e</string>
    <string name="point">.</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="nFactorial">n!</string>
    <string name="zero">0</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="nine">9</string>
    <string name="XmultiplyY">x^y</string>
    <string name="editTextBasic">0</string>
    <string name="toastMessage">올바른 수식이 아닙니다.</string>
</resources>